@@ -31,6 +31,7 @@ import static org.junit.Assert.fail;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.digitaltwin.aas4j.v3.model.DataTypeDefXsd;
@@ -67,6 +68,7 @@ import org.junit.Test;
  */
 public abstract class SubmodelServiceSuite {
 	private static final PaginationInfo NO_LIMIT_PAGINATION_INFO = new PaginationInfo(0, null);
+
 	protected abstract SubmodelService getSubmodelService(Submodel submodel);
 
 	@Test
@@ -82,8 +84,7 @@ public abstract class SubmodelServiceSuite {
 		Submodel technicalData = DummySubmodelFactory.createTechnicalDataSubmodel();
 		SubmodelService smService = getSubmodelService(technicalData);
 
-		assertTrue(technicalData.getSubmodelElements()
-				.containsAll(smService.getSubmodelElements(NO_LIMIT_PAGINATION_INFO).getResult()));
+		assertTrue(technicalData.getSubmodelElements().containsAll(smService.getSubmodelElements(NO_LIMIT_PAGINATION_INFO).getResult()));
 	}
 
 	@Test
@@ -127,11 +128,7 @@ public abstract class SubmodelServiceSuite {
 		SubmodelElementList submodelElementList = new DefaultSubmodelElementList();
 		submodelElementList.setIdShort("testList");
 		List<SubmodelElement> listElements = new ArrayList<>();
-		Property testProperty = new DefaultProperty.Builder().idShort("propIdShort")
-				.category("cat1")
-				.value("123")
-				.valueType(DataTypeDefXsd.INTEGER)
-				.build();
+		Property testProperty = new DefaultProperty.Builder().idShort("propIdShort").category("cat1").value("123").valueType(DataTypeDefXsd.INTEGER).build();
 		listElements.add(testProperty);
 		submodelElementList.setValue(listElements);
 		submodelElementsList.add(submodelElementList);
@@ -264,12 +261,7 @@ public abstract class SubmodelServiceSuite {
 	public void getMultiLanguagePropertyValue() {
 		Submodel technicalData = DummySubmodelFactory.createTechnicalDataSubmodel();
 
-		List<LangStringTextType> expectedValue = Arrays.asList(new DefaultLangStringTextType.Builder().text("Hello")
-				.language("en")
-				.build(),
-				new DefaultLangStringTextType.Builder().text("Hallo")
-						.language("de")
-						.build());
+		List<LangStringTextType> expectedValue = Arrays.asList(new DefaultLangStringTextType.Builder().text("Hello").language("en").build(), new DefaultLangStringTextType.Builder().text("Hallo").language("de").build());
 
 		MultiLanguagePropertyValue submodelElementValue = (MultiLanguagePropertyValue) getSubmodelService(technicalData).getSubmodelElementValue(SubmodelServiceHelper.SUBMODEL_TECHNICAL_DATA_MULTI_LANG_PROP_ID_SHORT);
 
@@ -319,17 +311,9 @@ public abstract class SubmodelServiceSuite {
 		Submodel operationDataSubmodel = DummySubmodelFactory.createOperationalDataSubmodelWithHierarchicalSubmodelElements();
 		SubmodelService submodelService = getSubmodelService(operationDataSubmodel);
 
-		Property propertyInSmeCol = new DefaultProperty.Builder().idShort("test123")
-				.category("cat1")
-				.value("305")
-				.valueType(DataTypeDefXsd.INTEGER)
-				.build();
+		Property propertyInSmeCol = new DefaultProperty.Builder().idShort("test123").category("cat1").value("305").valueType(DataTypeDefXsd.INTEGER).build();
 
-		Property propertyInSmeList = new DefaultProperty.Builder().idShort("test456")
-				.category("cat1")
-				.value("305")
-				.valueType(DataTypeDefXsd.INTEGER)
-				.build();
+		Property propertyInSmeList = new DefaultProperty.Builder().idShort("test456").category("cat1").value("305").valueType(DataTypeDefXsd.INTEGER).build();
 
 		String idShortPathPropertyInSmeCol = DummySubmodelFactory.SUBMODEL_OPERATIONAL_DATA_ELEMENT_COLLECTION_ID_SHORT;
 		submodelService.createSubmodelElement(idShortPathPropertyInSmeCol, propertyInSmeCol);
@@ -382,8 +366,7 @@ public abstract class SubmodelServiceSuite {
 	public void getPaginatedSubmodelElement() {
 		Submodel technicalData = DummySubmodelFactory.createTechnicalDataSubmodel();
 		SubmodelService submodelService = getSubmodelService(technicalData);
-		CursorResult<List<SubmodelElement>> cursorResult = submodelService
-				.getSubmodelElements(new PaginationInfo(1, ""));
+		CursorResult<List<SubmodelElement>> cursorResult = submodelService.getSubmodelElements(new PaginationInfo(1, ""));
 		assertEquals(1, cursorResult.getResult().size());
 	}
 
@@ -391,8 +374,7 @@ public abstract class SubmodelServiceSuite {
 	public void paginationCursor() {
 		Submodel technicalData = DummySubmodelFactory.createTechnicalDataSubmodel();
 		SubmodelService submodelService = getSubmodelService(technicalData);
-		CursorResult<List<SubmodelElement>> cursorResult = submodelService.getSubmodelElements(new PaginationInfo(1,
-				SubmodelServiceHelper.SUBMODEL_TECHNICAL_DATA_ANNOTATED_RELATIONSHIP_ELEMENT_ID_SHORT));
+		CursorResult<List<SubmodelElement>> cursorResult = submodelService.getSubmodelElements(new PaginationInfo(1, SubmodelServiceHelper.SUBMODEL_TECHNICAL_DATA_ANNOTATED_RELATIONSHIP_ELEMENT_ID_SHORT));
 		assertEquals(SubmodelServiceHelper.SUBMODEL_TECHNICAL_DATA_BLOB_ID_SHORT, cursorResult.getCursor());
 	}
 
@@ -401,13 +383,13 @@ public abstract class SubmodelServiceSuite {
 	public void invokeOperation() {
 		Submodel invokableSubmodel = DummySubmodelFactory.createSubmodelWithAllSubmodelElements();
 		SubmodelService submodelService = getSubmodelService(invokableSubmodel);
-		
+
 		Property val = new DefaultProperty.Builder().idShort("in").value("2").build();
-		
+
 		OperationVariable[] result = submodelService.invokeOperation(SubmodelServiceHelper.SUBMODEL_TECHNICAL_DATA_OPERATION_ID, new OperationVariable[] { SubmodelServiceHelper.createOperationVariable(val) });
 
 		Property ret = (Property) result[0].getValue();
-		
+
 		assertEquals("4", ret.getValue());
 	}
 
@@ -431,9 +413,9 @@ public abstract class SubmodelServiceSuite {
 
 		Entity entity = createDummyEntityWithStatement(testProperty, "entityIdShort");
 
-		submodelElementList.setValue(Arrays.asList(entity));
+		submodelElementList.setValue(Collections.singletonList(entity));
 
-		submodelElementCollection.setValue(Arrays.asList(submodelElementList));
+		submodelElementCollection.setValue(List.of(submodelElementList));
 
 		submodelElementsCollection.add(submodelElementCollection);
 
@@ -454,28 +436,19 @@ public abstract class SubmodelServiceSuite {
 	}
 
 	private DefaultSubmodelElementList createDummySubmodelElementList(String idShort) {
-		return new DefaultSubmodelElementList.Builder().idShort(idShort)
-				.build();
+		return new DefaultSubmodelElementList.Builder().idShort(idShort).build();
 	}
 
 	private SubmodelElementCollection createDummySubmodelElementCollection(String idShort) {
-		return new DefaultSubmodelElementCollection.Builder().idShort(idShort)
-				.build();
+		return new DefaultSubmodelElementCollection.Builder().idShort(idShort).build();
 	}
 
 	private DefaultEntity createDummyEntityWithStatement(SubmodelElement submodelElement, String idShort) {
-		return new DefaultEntity.Builder().idShort(idShort)
-				.category("cat1")
-				.statements(submodelElement)
-				.build();
+		return new DefaultEntity.Builder().idShort(idShort).category("cat1").statements(submodelElement).build();
 	}
 
 	private DefaultProperty createDummyProperty(String idShort) {
-		return new DefaultProperty.Builder().idShort(idShort)
-				.category("cat1")
-				.value("123")
-				.valueType(DataTypeDefXsd.INTEGER)
-				.build();
+		return new DefaultProperty.Builder().idShort(idShort).category("cat1").value("123").valueType(DataTypeDefXsd.INTEGER).build();
 	}
 
 }
